Spacing fix for Playfair

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -125,6 +125,6 @@
     transition: cx .7s, cy .7s, rx .7s, ry .7s, x .7s, y .7s, height .7s, width .7s;
 }
 
-.chapter-body > p {
+.chapter-body p {
     margin: .75rem auto;
 }
